--- a/2nd Day Folder/main.html
+++ b/2nd Day Folder/main.html
@@ -25,11 +25,11 @@
         <h1 class="title">HTML CLASS-1</h1>Html Form</h1>
     </header>
     <form>
-        <div style="background-color: yellow; align-items: flex-start">
+        <div style="background-color: yellow">
            <label>Email:</label>
            <input type="email" required>
         </div>
-        <div style="background-color: yellowgreen; align-items: flex-start">
+        <div style="background-color: yellowgreen">
             <label>Password:</label>
             <input type="text" required>
         </div>
