--- a/2nd Day Folder/main.html
+++ b/2nd Day Folder/main.html
@@ -34,7 +34,7 @@
             <input type="text" required>
         </div>
         <div>
-            <button>Login</button>
+            <button style="background-color: blanchedalmond;" >Login</button>
         </div>
     </form>
 
