--- a/2nd Day Folder/practice/newform.html
+++ b/2nd Day Folder/practice/newform.html
@@ -39,7 +39,7 @@
 <body style="background-color:cornflowerblue;">
     <form>
         <div>
-            <label style="width:50px;">Description:</label>
+            <label>Description:</label>
             <input type="text" style="
                 padding: 100px 100px;
                 padding-top: 50px;
