--- a/2nd Day Folder/practice/page.html
+++ b/2nd Day Folder/practice/page.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p id="demo">My First JavaScript Page </p>"
+    <p id="demo">My First JavaScript Page </p>
+    <button type="button" onclick="document.getElementById('demo').innerHTML = 'Hello JavaScript!'">Click Me</button>
 </body>
 </html>
